helm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
      - host: chart-example.local
        http:
          paths:
            - path: /service1
              pathType: Prefix
              backend:
                service:
                  name: umbrella-chart-1661513334-service-1
                  port:
                    number: 80
            - path: /service2
              pathType: Prefix
              backend:
                service:
                  name: umbrella-chart-1661513334-service-2
                  port:
                    number: 80
